--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -16,7 +16,12 @@ jobs:
       - name: Build version suffix
         run: echo "VERSION_SUFFIX=alpha.${{ github.event.number }}" >> $GITHUB_ENV
 
-      - name: Setup .NET Core
+      - name: Setup .NET Core (3.1.x)
+        uses: actions/setup-dotnet@v1.7.2
+        with:
+          dotnet-version: '3.1.x'
+
+      - name: Setup .NET Core (global.json)
         uses: actions/setup-dotnet@v1.7.2
 
       - run: dotnet build --configuration Release
