--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,27 @@ env:
   DOTNET_NOLOGO: true
 
 jobs:
+  lint-markdown:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2.3.4
+
+      - name: Install Node
+        uses: actions/setup-node@v2.1.4
+        with:
+          node-version: 15
+
+      - uses: xt0rted/markdownlint-problem-matcher@v1.1.0
+
+      - run: yarn install
+
+      - run: yarn test
+
   build:
+    needs: lint-markdown
+
     runs-on: ubuntu-latest
 
     steps:
