--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -35,6 +35,24 @@ jobs:
         with:
           path: ./artifacts/*
 
+  lint-markdown:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2.3.4
+
+      - name: Install Node
+        uses: actions/setup-node@v2.1.4
+        with:
+          node-version: 15
+
+      - uses: xt0rted/markdownlint-problem-matcher@v1.1.0
+
+      - run: yarn install
+
+      - run: yarn test
+
   message-check:
     name: Block on fixup commits
 
