--- a/test/TailwindCssTagHelpersTests.csproj
+++ b/test/TailwindCssTagHelpersTests.csproj
@@ -6,7 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="FakeItEasy" Version="7.0.0" />
-    <PackageReference Include="FakeItEasy.Analyzer.CSharp" Version="6.1.0" />
+    <PackageReference Include="FakeItEasy.Analyzer.CSharp" Version="6.1.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
     <PackageReference Include="Shouldly" Version="4.0.3" />
     <PackageReference Include="xunit" Version="2.4.1" />
