--- a/src/TailwindCssTagHelpers.csproj
+++ b/src/TailwindCssTagHelpers.csproj
@@ -13,6 +13,7 @@
     <IncludeSymbols>true</IncludeSymbols>
     <PackageIcon>logo.png</PackageIcon>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageReleaseNotes>See https://github.com/xt0rted/tailwindcss-tag-helpers/blob/main/CHANGELOG.md for more info</PackageReleaseNotes>
     <PackageTags>Tailwind;TailwindCSS;TailwindUI;TagHelper;TagHelpers</PackageTags>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -21,10 +22,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="../assets/logo.png" Pack="true" PackagePath="">
+    <None Include="../README.md" Pack="true" PackagePath="\">
       <LinkBase>assets</LinkBase>
     </None>
-    <None Include="../LICENSE" Pack="true" PackagePath="">
+    <None Include="../assets/logo.png" Pack="true" PackagePath="\">
+      <LinkBase>assets</LinkBase>
+    </None>
+    <None Include="../LICENSE" Pack="true" PackagePath="\">
       <LinkBase>assets</LinkBase>
     </None>
   </ItemGroup>
