--- a/src/TailwindCssTagHelpers.csproj
+++ b/src/TailwindCssTagHelpers.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <RootNamespace>Tailwind.Css</RootNamespace>
     <AssemblyName>TailwindCssTagHelpers</AssemblyName>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>embedded</DebugType>
     <IsPackable>true</IsPackable>
   </PropertyGroup>
 
@@ -10,7 +12,6 @@
     <Description>ASP.NET tag helpers to make working with Tailwind CSS and Tailwind UI easier</Description>
     <Deterministic>true</Deterministic>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
-    <IncludeSymbols>true</IncludeSymbols>
     <PackageIcon>logo.png</PackageIcon>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
@@ -18,7 +19,6 @@
     <PackageTags>Tailwind;TailwindCSS;TailwindUI;TagHelper;TagHelpers</PackageTags>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <RepositoryBranch>main</RepositoryBranch>
-    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
   <ItemGroup>
