--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -10,38 +10,38 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Check out repository
         uses: actions/checkout@v2.4.0
 
       - name: Build version suffix
         run: echo "VERSION_SUFFIX=alpha.${{ github.event.number }}" >> $GITHUB_ENV
 
-      - name: Setup .NET Core
+      - name: Set up .NET Core
         uses: actions/setup-dotnet@v1.9.0
         with:
           dotnet-version: |
             3.1.x
             5.0.x
 
-      - name: Setup .NET Core (global.json)
+      - name: Set up .NET Core (global.json)
         uses: actions/setup-dotnet@v1.9.0
 
       - run: dotnet build --configuration Release
 
       - run: dotnet test --configuration Release --no-build
 
-      - run: dotnet pack --configuration Release --output ./artifacts --version-suffix $VERSION_SUFFIX
+      - run: dotnet pack --configuration Release --no-build --output ./artifacts --version-suffix $VERSION_SUFFIX
 
       - name: Publish artifacts
         uses: actions/upload-artifact@v2.3.1
         with:
-          path: ./artifacts/*
+          path: ./artifacts/*.nupkg
 
   lint-markdown:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Check out repository
         uses: actions/checkout@v2.4.0
 
       - name: Install Node
