--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,45 +1,24 @@
-name: CI
+name: Release
 
 on:
   push:
-    branches: [main]
+    tags:
+      - "v*.*.*"
+
+permissions:
+  contents: write
+  packages: write
 
 env:
   DOTNET_NOLOGO: true
 
 jobs:
-  lint-markdown:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Check out repository
-        uses: actions/checkout@v2.4.0
-
-      - name: Install Node
-        uses: actions/setup-node@v2.5.0
-        with:
-          node-version: 15
-
-      - uses: xt0rted/markdownlint-problem-matcher@v1.1.0
-
-      - run: yarn install
-
-      - run: yarn test
-
   build:
-    needs: lint-markdown
-
     runs-on: ubuntu-latest
-
-    permissions:
-      packages: write
 
     steps:
       - name: Check out repository
         uses: actions/checkout@v2.4.0
-
-      - name: Build version suffix
-        run: echo "VERSION_SUFFIX=beta.${{ github.run_number }}" >> $GITHUB_ENV
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1.9.0
@@ -55,15 +34,28 @@ jobs:
 
       - run: dotnet test --configuration Release --no-build
 
-      - run: dotnet pack --configuration Release --no-build --output ./artifacts --version-suffix $VERSION_SUFFIX
+      - run: dotnet pack --configuration Release --no-build --output ./artifacts
 
       - name: Publish artifacts
         uses: actions/upload-artifact@v2.3.1
         with:
           path: ./artifacts/*.nupkg
 
+      - name: Upload release assets
+        uses: softprops/action-gh-release@v0.1.14
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          files: ./artifacts/*.nupkg
+
       - name: Publish to GPR
         run: |
           dotnet nuget push "./artifacts/*.nupkg" \
             --api-key ${{ secrets.GITHUB_TOKEN }} \
             --source https://nuget.pkg.github.com/${{ github.repository_owner }}
+
+      - name: Publish to nuget.org
+        run: |
+          dotnet nuget push "./artifacts/*.nupkg" \
+            --api-key ${{ secrets.NUGET_TOKEN }} \
+            --source https://api.nuget.org/v3/index.json
