--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,29 +1,37 @@
-name: CodeQL
+name: "CodeQL"
 
 on:
   push:
     branches: [main]
+  pull_request:
+    branches: [main]
   schedule:
-    - cron: '0 6 * * 1'
-
-permissions:
-  security-events: write
-
-env:
-  DOTNET_NOLOGO: true
+    - cron: "21 1 * * 0"
 
 jobs:
   analyze:
+    name: Analyze
+
     runs-on: ubuntu-latest
+
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+
+    strategy:
+      fail-fast: false
+      matrix:
+        language: ["csharp"]
 
     steps:
       - name: Check out repository
-        uses: actions/checkout@v2.4.0
+        uses: actions/checkout@v3.0.0
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v1
         with:
-          languages: csharp
+          languages: ${{ matrix.language }}
 
       - name: Autobuild
         uses: github/codeql-action/autobuild@v1
