Switch to xt0rted/setup-dotnet

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,15 +20,8 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3.0.0
 
-      - name: Set up .NET Core
-        uses: actions/setup-dotnet@v2.0.0
-        with:
-          dotnet-version: |
-            3.1.x
-            5.0.x
-
-      - name: Set up .NET Core (global.json)
-        uses: actions/setup-dotnet@v2.0.0
+      - name: Set up .NET
+        uses: xt0rted/setup-dotnet@v1.1.0
 
       - run: dotnet build --configuration Release
 
