Use a more robust class extraction method

--- a/test/TailwindCssTagHelpersTests.csproj
+++ b/test/TailwindCssTagHelpersTests.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <RootNamespace>Tailwind.Css.TagHelpers</RootNamespace>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
