Add tests for new tag helper

--- a/src/TailwindCssTagHelpers.csproj
+++ b/src/TailwindCssTagHelpers.csproj
@@ -23,6 +23,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <InternalsVisibleTo Include="TailwindCssTagHelpersTests" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="../README.md" Pack="true" PackagePath="\">
       <LinkBase>assets</LinkBase>
     </None>
