--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -7,10 +7,15 @@ on:
     branches: [main]
   schedule:
     - cron: "21 1 * * 0"
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
+
+env:
+  DOTNET_NOLOGO: true
+  FORCE_COLOR: 3
 
 jobs:
   analyze:
