--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,15 +1,15 @@
 name: Release
 
 on:
-  push:
-    tags:
-      - "v*.*.*"
+  release:
+   types: [published]
 
 permissions:
   contents: write
   packages: write
 
 env:
+  CONFIGURATION: Release
   DOTNET_NOLOGO: true
 
 jobs:
@@ -17,29 +17,52 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Get version from tag
+        id: tag_name
+        run: echo ::set-output name=current_version::${GITHUB_REF#refs/tags/v}
+
       - name: Check out repository
         uses: actions/checkout@v3.1.0
 
       - name: Set up .NET
         uses: xt0rted/setup-dotnet@v1.4.0
 
-      - run: dotnet build --configuration Release
 
-      - run: dotnet test --configuration Release --no-build
+      - run: dotnet tool restore
 
-      - run: dotnet pack --configuration Release --no-build --output ./artifacts
+      - run: dotnet r build
+
+      - run: dotnet r test -- --no-build --logger GitHubActions
+
+      - run: dotnet r pack -- --no-build
 
       - name: Publish artifacts
         uses: actions/upload-artifact@v3.1.0
         with:
           path: ./artifacts/*.nupkg
 
+      - name: Get changelog entry
+        uses: mindsers/changelog-reader-action@v2.2.0
+        id: changelog_reader
+        with:
+          version: ${{ steps.tag_name.outputs.current_version }}
+
       - name: Upload release assets
         uses: softprops/action-gh-release@v0.1.14
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        id: release_updater
         with:
+          body: ${{ steps.changelog_reader.outputs.changes }}
           files: ./artifacts/*.nupkg
+
+      - name: Create discussion for release
+        run: |
+          gh api \
+            --method PATCH \
+            -H "Accept: application/vnd.github+json" \
+            /repos/${{ github.repository }}/releases/${{ steps.release_updater.outputs.id }} \
+            -f discussion_category_name='Announcements'
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
 
       - name: Publish to GPR
         run: |
