--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "cSpell.words": [
         "appsettings",
         "tailwindcss"
-    ]
+    ],
+    "dotnet.defaultSolution": "TailwindCssTagHelpers.sln"
 }
