--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install Node
         uses: actions/setup-node@v4.0.2
         with:
-          node-version: 18
+          node-version-file: .nvmrc
 
       - uses: xt0rted/markdownlint-problem-matcher@v3.0.0
 
